syntax = "proto3";

option csharp_namespace = "Xelit3.Playground.API.Grpc";

import "google/api/annotations.proto";

package todo;


service ToDo{

	////Read
	rpc GetSingleToDo(GetSingleToDoRequest) returns (ToDoResponse) {
		option (google.api.http) = {
			get: "/v1/todo/{id}"
		};
	}

	rpc GetAllToDo(GetAllToDoRequest) returns (ToDoCollectionResponse) {
		option (google.api.http) = {
			get: "/v1/todo/all"
		};
	}

	//Server stream response
	rpc GetAllToDoStream(GetAllToDoRequest) returns (stream ToDoResponse) {
		option (google.api.http) = {
			get: "/v1/todo/all"
		};
	}

	rpc GetMultipleToDoStream(stream GetSingleToDoRequest) returns (ToDoCollectionResponse){
		option (google.api.http) = {
			get: "/v1/todo/multiple/{ids}"
		};
	}

	////Create
	rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {
		option (google.api.http) = {
			post: "/v1/todo",
			body: "*"
		};
	}

	////Update
	rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) { 
		option (google.api.http) = {
			put: "/v1/todo",
			body: "*"
		};
	}

	////Delete
	rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) { 
		option (google.api.http) = {
			delete: "/v1/todo/{id}"			
		};
	}

}


message GetSingleToDoRequest {
	int32 id = 1;
}

message ToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
}

message GetMultipleToDoRequest {
	repeated int32 ids = 1;
}

message GetAllToDoRequest { }

message ToDoCollectionResponse {
	repeated ToDoResponse to_dos = 1;
}

message CreateToDoRequest {
	string title = 1;
	string description = 2;
}

message CreateToDoResponse {
	int32 id = 1;
}

message UpdateToDoRequest {
	int32 id = 1;
	string title = 2;
	string description = 3;
}

message UpdateToDoResponse {
	int32 id = 1;
}

message DeleteToDoRequest {
	int32 id = 1;
}

message DeleteToDoResponse {
	int32 id = 1;
}